# swe

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
gym/: README.md  calculator.py  config.py  data_analyzer.py  file_processor.py  sample_config.yaml  web_scraper.py
gym/tests/: test_calculator.py
src/swe/: __init__.py  agent.py  cli.py
src/swe/llm/: README.md  __init__.py  azure_client.py  claude_client.py  client.py  examples.py  examples_demo.py  gemini_client.py  ollama_client.py  openai_client.py  test_azure_client.py  test_claude_client.py  test_client.py  test_gemini_client.py  test_ollama_client.py  test_openai_client.py  test_types.py  test_utils.py  types.py
src/swe/tools/: __init__.py  file_tools.py  search_tools.py  terminal_tools.py
