[project]
name = "swe"
version = "0.1.0"
description = "A software engineering agent engineer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
]

[tool.ruff]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = []
fixable = ["ALL"]
unfixable = []
line-length = 88
target-version = "py310"

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["src/swe"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]
